Add support for update MainCategory
